--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "reactweatherapp",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://Mashawn-Rolfe.github.io/reactweatherapp",
+  "homepage": "https://mashawn-rolfe.github.io/reactweatherapp",
   "type": "module",
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
